# magi

./: .gitignore  PROGRESS.md  README.md  agents.md  restart-backend.sh
.claude/: settings.local.json
backend/: LLM_CONFIG_GUIDE.md  README_TEST.md  TESTING_GUIDE.md  config.example.yaml  pyproject.toml  quick_test.py  requirements.txt  run_server.py  test_llm.py
backend/examples/: demo.py  test_api.py  test_basic.py  test_complete_framework.py  test_lifecycle.py  test_load_balancing.py  test_memory.py  test_propagation.py  test_tool_advanced.py  test_tools.py  test_websocket.py  test_worker_agent.py
backend/personalities/: default.md
backend/src/magi/agent/: __init__.py  chat.py
backend/src/magi/api/: __init__.py  app.py  middleware.py  responses.py  websocket.py
backend/src/magi/awareness/: __init__.py  base.py  manager.py  sensors.py
backend/src/magi/config/: __init__.py  loader.py  models.py
backend/src/magi/core/: __init__.py  agent.py  complete_agent.py  lifecycle.py  logger.py  loop.py  master_agent.py  monitoring.py  task_agent.py  task_database.py  timeout.py  timeout_calculator.py  worker_agent.py
backend/src/magi/events/: backend.py  enhanced_backend.py  events.py  memory_backend.py  sqlite_backend.py
backend/src/magi/llm/: __init__.py  anthropic.py  base.py  openai.py  provider_bridge.py
backend/src/magi/memory/: __init__.py  behavior_evolution.py  capability_store.py  context_builder.py  emotional_state.py  growth_memory.py  integration.py  l2_event_relations.py  l3_semantic_embeddings.py  l4_summaries.py  l5_capabilities.py  models.py  other_memory.py  personality_loader.py  raw_event_store.py  self_memory.py  self_memory_v2.py  store.py
backend/src/magi/plugins/: base.py  manager.py
backend/src/magi/processing/: __init__.py  actions.py  base.py  capability.py  capability_store.py  complexity.py  context.py  experience_replay.py  failure_learning.py  human_in_loop.py  learning.py  module.py  processor.py
backend/src/magi/skills/: __init__.py  executor.py  indexer.py  loader.py  schema.py
backend/src/magi/tools/: __init__.py  base.py  context_decider.py  function_calling.py  planner.py  recommender.py  registry.py  schema.py  selector.py  version_manager.py
backend/tests/: test_provider_bridge.py
(+89 files in other folders)
